--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>oauth-authorization</module>
         <module>dubbo-consumer</module>
         <module>springboot-api</module>
+        <module>oauth2-client</module>
     </modules>
     <packaging>pom</packaging>
 
