--- a/pom.xml
+++ b/pom.xml
@@ -206,6 +206,12 @@
             <artifactId>mybatis-plus</artifactId>
             <version>3.3.2</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+<!--            <scope>test</scope>-->
+        </dependency>
     </dependencies>
 
 
