--- a/springboot-server/src/main/resources/redis.properties
+++ b/springboot-server/src/main/resources/redis.properties
@@ -1,5 +1,6 @@
 #Redis
-redis.master.host=47.93.201.189
+#redis.master.host=47.93.201.189
+redis.master.host=127.0.0.1
 redis.master.port=6379
 redis.master.password=
 redis.master.name=
